@@ -4,6 +4,7 @@ PostGIS 1.0.2cvs
 	- Memory Leak fix in pg_error
 	- Rtree index fix. See:
 	  http://archives.postgresql.org/pgsql-hackers/2005-06/msg01108.php
+	- Chunked GeomUnion implementation (much faster)
 
 PostGIS 1.0.1
 2005/05/24
